Adds description for modules